Reorder ListenerService. Add extra check to retry when connection is lost.